# UnityPack

./: CMakeLists.txt
src/: Serialize.cpp  Serialize.h  SerializedFile.cpp  SerializedFile.h  default.h  main.cpp
unitypack/: object.py  type.py
unitypack/engine/: texture.py
